--- a/Acme-Conference/src/main/webapp/views/actor/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages.properties
@@ -25,6 +25,7 @@ actor.back.welcome = Welcome page
 actor.signUp.subtitle = As a new(rol)
 actor.signUp.author = Author
 actor.signUp.reviewer = Reviewer
+actor.signUp.sponsor = Sponsor
 actor.signUp.administrator = Administrator
 actor.commit.error = Cannot commit operation
 
