--- a/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
@@ -24,6 +24,7 @@ actor.cancel = Cancelar
 actor.back.welcome = Página de bienvenida
 actor.signUp.subtitle = Como un nuevo(rol)
 actor.signUp.author = Autor
+actor.signUp.sponsor = Patrocinador
 actor.signUp.reviewer = Revisor
 actor.signUp.administrator = Administrador
 actor.commit.error = No se puede completar la acción
