--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -5,7 +5,8 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-
+conference.show = Mostrar
+conference.sponsoredContent = Este contenido está patrocinado por:
 conference.save = Guardar
 conference.cancel = Atrás
 conference.title = Titulo
@@ -13,7 +14,7 @@ conference.acronym = Acrónimo
 conference.venue = Lugar
 conference.summary = Resumen
 conference.description = Descripción
-conference.submissionDeadline = Fecha de presentación
+conference.submissionDeadline = Fecha de sumisión
 conference.notificationDeadline = Fecha de notificación
 conference.cameraReadyDeadline = Fecha de publicación
 conference.startDate= Fecha de Estreno
@@ -21,6 +22,9 @@ conference.endDate = Fecha de Fin
 conference.summary = Resumen
 conference.fee = Cuota
 conference.isFinal = ¿Está en modo final?
+conference.administrator = Administrador
+conference.registrations = Registros
+conference.submissions = Sumisiones
 conference.filter.all = Todas
 conference.filter.forthcoming = Próximas
 conference.filter.past = Pasadas
