Finder almost done
Views and controller needed to use the finder
Method to get all the results done in ConferenceService

--- a/Acme-Conference/src/main/webapp/views/category/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/category/messages_es.properties
@@ -6,5 +6,15 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-
 category.categories = Categorías
+category.name = Nombre en Inglés
+category.nameEs = Nombre en Español
+category.CONFERENCE = Padre de todas las categorías
+
+category.edit. Editar
+category.delete = Eliminar
+category.notEditable = No editable
+category.notDeletable = No eliminable
+
+category.save = Guardar
+category.cancel = Cancelar
