--- a/Acme-Conference/src/main/webapp/views/comment/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/comment/messages.properties
@@ -6,17 +6,11 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-report.reviewer = Reviewer
-report.submission = Submission
-report.originalityScore = Originality Score
-report.qualityScore = Quality Score
-report.readabilityScore = Readability Score
-report.decision = Decision
-report.comments = Comments
+comment.author = Author
+comment.author.anonimous = Anonimous author
+comment.title = Title
+comment.moment = Moment
+comment.text = Text
 
-report.reports = Reports
-
-report.display = Display
-report.back = Back
-report.addComment = Add comment
-report.cancel = Cancel
+comment.save = Save
+comment.back = Back
