--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -13,11 +13,11 @@ conference.acronym = Acronym
 conference.venue = Venue
 conference.summary = Summary
 conference.description = Description
-conference.submissionDeadline = Submission Deadline
-conference.notificationDeadline = Notification Deadline
-conference.cameraReadyDeadline = Camera-Ready Deadline
-conference.startDate= Start Date
-conference.endDate = End Date
+conference.submissionDeadline = Submission Deadline. The format is like this: yyyy/MM/dd HH:mm
+conference.notificationDeadline = Notification Deadline. The format is like this: yyyy/MM/dd HH:mm
+conference.cameraReadyDeadline = Camera-Ready Deadline. The format is like this: yyyy/MM/dd HH:mm
+conference.startDate= Start Date. The format is like this: yyyy/MM/dd HH:mm
+conference.endDate = End Date. The format is like this: yyyy/MM/dd HH:mm
 conference.summary = Summary
 conference.fee = Fee
 conference.isFinal = ¿Is in final mode?
