--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -11,6 +11,7 @@ master.page.administrator			= Administrator
 master.page.author				= Author
 master.page.author.submissions = My Submissions
 master.page.author.registrations = My registrations
+master.page.author.editFinder = Edit finder
 
 master.page.login 					= Login
 master.page.logout 					= Logout
