--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -11,6 +11,7 @@ master.page.administrator			= Administrador
 master.page.author				= Autor
 master.page.author.submissions = Mis presentaciones
 master.page.author.registrations = Mis registros
+master.page.author.editFinder = Editar filtro
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
