Registry and edit of actors tested

--- a/Acme-Conference/src/main/webapp/views/actor/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages.properties
@@ -11,6 +11,7 @@ actor.name = Name*
 actor.middleName = Middle name
 actor.surname = Surname*
 actor.photo = Photo
+actor.attachments = For the photo, just introduce the link to the file. Like http://google.com
 actor.email = Email*
 actor.phoneNumber = Phone number
 actor.address = Address
