--- a/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/actor/messages_es.properties
@@ -11,6 +11,7 @@ actor.name = Nombre*
 actor.middleName = Segundo nombre
 actor.surname = Apellido*
 actor.photo = Foto
+actor.attachments = Para la foto, introducir el enlace al archivo. De la forma http://google.com
 actor.email = Email*
 actor.phoneNumber = Número de teléfono
 actor.address = Dirección
