--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -15,6 +15,7 @@ master.page.author.editFinder = Edit finder
 
 master.page.login 					= Login
 master.page.logout 					= Logout
+master.page.signUp = Sign up
 master.page.profile = Profile
 master.page.editProfile = Edit profile
 
