--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -15,6 +15,7 @@ master.page.author.editFinder = Editar filtro
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+master.page.signUp = Registrarse
 master.page.profile = Perfil
 master.page.editProfile = Editar perfil
 
