Revert "Finder finished"
This reverts commit c208740948763715b295645979a07d6ea2824419.

--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -13,11 +13,11 @@ conference.acronym = Acrónimo
 conference.venue = Lugar
 conference.summary = Resumen
 conference.description = Descripción
-conference.submissionDeadline = Fecha de presentación. El formato es así: yyyy/MM/dd HH:mm
-conference.notificationDeadline = Fecha de notificación. El formato es así: yyyy/MM/dd HH:mm
-conference.cameraReadyDeadline = Fecha de publicación. El formato es así: yyyy/MM/dd HH:mm
-conference.startDate= Fecha de Estreno. El formato es así: yyyy/MM/dd HH:mm
-conference.endDate = Fecha de Fin. El formato es así: yyyy/MM/dd HH:mm
+conference.submissionDeadline = Fecha de presentación
+conference.notificationDeadline = Fecha de notificación
+conference.cameraReadyDeadline = Fecha de publicación
+conference.startDate= Fecha de Estreno
+conference.endDate = Fecha de Fin
 conference.summary = Resumen
 conference.fee = Cuota
 conference.isFinal = ¿Está en modo final?
