Revert "Finder almost done"
This reverts commit e4709fe2343095f4ebb371d1361df7eeca0f2bf4.

--- a/Acme-Conference/src/main/webapp/views/comment/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/comment/messages.properties
@@ -6,11 +6,17 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-comment.author = Author
-comment.author.anonimous = Anonimous author
-comment.title = Title
-comment.moment = Moment
-comment.text = Text
+report.reviewer = Reviewer
+report.submission = Submission
+report.originalityScore = Originality Score
+report.qualityScore = Quality Score
+report.readabilityScore = Readability Score
+report.decision = Decision
+report.comments = Comments
 
-comment.save = Save
-comment.back = Back
+report.reports = Reports
+
+report.display = Display
+report.back = Back
+report.addComment = Add comment
+report.cancel = Cancel
