--- a/Acme-Conference/src/main/webapp/views/comment/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/comment/messages_es.properties
@@ -6,11 +6,17 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-comment.author = Autor
-comment.author.anonimous = Autor anónimo
-comment.title = Título
-comment.moment = Momento
-comment.text = Texto
+report.reviewer = Revisor
+report.submission = Submission
+report.originalityScore = Originalidad
+report.qualityScore = Calidad
+report.readabilityScore = Legibilidad
+report.decision = Decisión
+report.comments = Comentarios
 
-comment.save = Guardar
-comment.back = Atrás
+report.reports = Informes
+
+report.display = Mostrar
+report.back = Atrás
+report.addComment = Añadir un comentario
+report.cancel = Cancelar
