Test to see if Message works

--- a/Acme-Conference/src/main/webapp/views/finder/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/finder/messages.properties
@@ -6,11 +6,9 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-comment.author = Author
-comment.author.anonimous = Anonimous author
-comment.title = Title
-comment.moment = Moment
-comment.text = Text
-
-comment.save = Save
-comment.back = Back
+finder.keyword = Keyword
+finder.startDate = Start date. The format is like this: yyyy/MM/dd HH:mm
+finder.endDate = End date. The format is like this: yyyy/MM/dd HH:mm
+finder.fee = Maximum fee
+finder.save = Save
+finder.cancel = Cancel
