--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -11,9 +11,11 @@ master.page.administrator			= Administrator
 master.page.author				= Author
 master.page.author.submissions = My Submissions
 master.page.author.registrations = My registrations
+master.page.author.editFinder = Edit finder
 
 master.page.login 					= Login
 master.page.logout 					= Logout
+master.page.signUp = Sign up
 master.page.profile = Profile
 master.page.editProfile = Edit profile
 
