--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -37,3 +37,6 @@ master.page.administrator.dashboard	= Dashboard
 master.page.reviewer = Reviewer
 master.page.reviewer.submissionsToReview = Submissions to review
 master.page.reviewer.reports = Reports
+
+master.page.sponsor = Sponsor
+master.page.sponsor.sponsorships = Sponsorships
