--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -33,3 +33,5 @@ master.page.conferences = Conferencias
 master.page.admin.conferences = Administrar conferencias
 master.page.administrator.dashboard	= Dashboard
 
+master.page.sponsor = Patrocinador
+master.page.sponsor.sponsorships = Patrocinios
