pequeños arreglos del c

--- a/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
@@ -50,3 +50,7 @@ submission.editPaperError.submissionNotAccepted = No puedes editar el papel porq
 submission.editPaperError.notPaperAuthor = No puedes editar el papel porque no eres uno de sus autores.
 submission.editPaperError.paperAlreadyCameraReady = No puedes editar más el papel porque ya está en una versión lista para publicación.
 submission.editPaperError.NotSubmissionAuthor = No puedes editar el papel correspondiente porque no eres el autor de la correspondiente sumisión.
+
+submission.cantAddMoreReviewers = No puedes asignar más revisores porque ya tienes 3 asignados
+submission.cantAssingNDElapsed = No puedes asignar más revisores porque la fecha de notificación ha expirado
+submission.remember = *Recuerda que la opción de añadir revisores automáticamente no añadirá nada si ninguna de sus cualidades está relacionada con la conferencia, pero aun así puedes asignar uno manualmente si lo deseas.
