--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -49,3 +49,6 @@ submission.editPaperError.notPaperAuthor = You can't edit the paper because you 
 submission.editPaperError.paperAlreadyCameraReady = You can't edit more the paper because it's already in Camera-Ready State.
 submission.editPaperError.NotSubmissionAuthor = You can't edit the paper because you aren't the author of the Submission.
 
+submission.cantAddMoreReviewers = You can't add more reviewers because you already have 3 assigned
+submission.cantAssingNDElapsed = You can't add more reviewers because the notification Deadline has elapsed
+submission.remember = *Remember that the option of assign Automatically will not add any reviewer if none of the avaliable ones has the expertise requerided,but you can still assing one manually if you want
