--- a/Acme-Conference/src/main/webapp/views/activity/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages.properties
@@ -53,6 +53,9 @@ activity.cantAddActivitiesSorry = Sorry,but u can't create an activity, the conf
 activity.cantAddSections = You can't add more sections to the presentation because the startDate from the conference has elapsed
 activity.error.noPapersAvailable = We're sorry,but there aren't any accepted papers to this conference in this moment,so you can't create a presentation
 
+activity.listComments = List comments
+activity.addComment = Add comment
+
 activity.error.OnlySectionsToTutorials = You can't add sections to a activity that is not a tutorial
 activity.error.StartDateExpired = You can't add a section because the startDate of the conference has expired
 activity.cantDeleteActivities = You can't delete the activities because the startDate from the conference has elapsed
