--- a/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/activity/messages_es.properties
@@ -53,6 +53,9 @@ activity.cantAddActivitiesSorry = Lo sentimos, no puede añadir más actividades, 
 activity.cantAddSections = No puedes añadir más secciones a la presentación porque la fecha de estreno de la conferencia ya ha pasado
 activity.error.noPapersAvailable = Lo sentimos,pero no hay ningún papel aceptado ahora mismo para esta conferencia, por lo que no puede crear una presentación.
 
+activity.listComments = Lista de comentarios
+activity.addComment = Añadir comentario
+
 activity.error.OnlySectionsToTutorials = No puedes añadir Secciones a una actividad que no es un tutorial
 activity.error.StartDateExpired = No puedes añadir una sección porque la conferencia ya ha empezado
 activity.cantDeleteActivities = No puedes borrar actividades porque la conferencia ya ha empezado
