--- a/Acme-Conference/src/main/webapp/views/comment/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/comment/messages_es.properties
@@ -7,10 +7,11 @@
 # http://www.tdg-seville.info/License.html
 
 comment.author = Autor
-comment.author.anonimous = Autor anónimo
-comment.title = Título
+comment.author.anonimous = Autor anonimo
+comment.title = Titulo
 comment.moment = Momento
 comment.text = Texto
 
 comment.save = Guardar
-comment.back = Atrás
+comment.back = Atras
+comment.cancel = Cancelar
