--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -47,6 +47,11 @@ conference.submissionDeadlineNotElapsed = The submission Deadline hasn't elapsed
 conference.cameraReadyDeadlineElapsed = The Camera-Ready Deadline has elapsed.
 conference.cantEditFinal = You can't edit anymore the conference because now is in final mode.
 
+conference.listComments = List comments
+conference.addComment = Add comment
+conference.actorSubmitted = Broadcast to actors submitted to this conference
+conference.actorRegistered = Broadcast to actors registered to this conference
+
 conference.form.error.submissionDeadline = The Submission Deadline must be in future and before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
 conference.form.error.notificationDeadline = The notification Deadline must be in future before the camera-ready deadline, before the startDate and before the endDate
 conference.form.error.cameraReadyDeadline = The Camera-Ready Deadline must be in future and before the startDate and before the endDate
