--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -6,37 +6,37 @@
 # TDG Licence, a copy of which you may download from
 # http://www.tdg-seville.info/License.html
 conference.show = Mostrar
-conference.sponsoredContent = Este contenido estï¿½ patrocinado por:
+conference.sponsoredContent = Este contenido esta patrocinado por:
 conference.save = Guardar
-conference.cancel = Atrï¿½s
+conference.cancel = Atras
 conference.title = Titulo
-conference.acronym = Acrï¿½nimo
+conference.acronym = Acronimo
 conference.venue = Lugar
 conference.summary = Resumen
-conference.description = Descripciï¿½n
-conference.submissionDeadline = Fecha de presentaciï¿½n. El formato es asï¿½: yyyy/MM/dd HH:mm
-conference.notificationDeadline = Fecha de notificaciï¿½n. El formato es asï¿½: yyyy/MM/dd HH:mm
-conference.cameraReadyDeadline = Fecha de publicaciï¿½n. El formato es asï¿½: yyyy/MM/dd HH:mm
-conference.startDate= Fecha de Estreno. El formato es asï¿½: yyyy/MM/dd HH:mm
-conference.endDate = Fecha de Fin. El formato es asï¿½: yyyy/MM/dd HH:mm
+conference.description = Descripcion
+conference.submissionDeadline = Fecha de presentacion. El formato es asi: yyyy/MM/dd HH:mm
+conference.notificationDeadline = Fecha de notificacion. El formato es asi: yyyy/MM/dd HH:mm
+conference.cameraReadyDeadline = Fecha de publicacion. El formato es asi: yyyy/MM/dd HH:mm
+conference.startDate= Fecha de Estreno. El formato es asi: yyyy/MM/dd HH:mm
+conference.endDate = Fecha de Fin. El formato es asi: yyyy/MM/dd HH:mm
 conference.summary = Resumen
 conference.fee = Cuota
-conference.isFinal = ï¿½Estï¿½ en modo final?
+conference.isFinal = ¿ Esta en modo final ?
 conference.administrator = Administrador
 conference.registrations = Registros
 conference.submissions = Sumisiones
 conference.filter.all = Todas
-conference.filter.forthcoming = Prï¿½ximas
+conference.filter.forthcoming = Proximas
 conference.filter.past = Pasadas
 conference.filter.running = En marcha
 conference.filter= Filtrar
 conference.edit =  Editar
 conference.create = Crear
-conference.back = Atrï¿½s
+conference.back = Atras
 conference.yes = Si
 conference.no = No
-conference.commit.error = Error de transacciï¿½n
-conference.submission5Days= Filtrar aquellas cuya fecha de presentaciï¿½n transcurriï¿½ en los ï¿½ltimos 5 dï¿½as.
+conference.commit.error = Error de transaccion
+conference.submission5Days= Filtrar aquellas cuya fecha de presentacion transcurrio en los ultimos 5 dias.
 conference.notification5Days = Filtrar aquellas cuya fecha de notificaciï¿½n transcurrirï¿½n  en los prï¿½ximos 5 dï¿½as.
 conference.cameraReady5Days =  Filtrar aquellas cuya fecha de publicaciï¿½n transcurrirï¿½n  en los prï¿½ximos 5 dï¿½as.
 conference.organised5Days = Filtrar aquellas que van a ser organizadas en los prï¿½ximos 5 dï¿½as.
@@ -54,6 +54,12 @@ conference.form.error.endDate =  The endDate must be in future
 conference.form.error.alreadyFinalMode =  This conference was already setted as final mode,so you can't modify it anymore
 conference.activities = Activitidades de la conferencia
 conference.submissionList = Sumisiones de la conferencia
+
+conference.listComments = Lista de comentarios
+conference.addComment = Añadir comentario
+conference.actorSubmitted = Broadcast para los actores seguidores de esta Conferencia
+conference.actorRegistered = Broadcast para los actores registrados para esta Conferencia
+
 
 conference.cantUpdate.submissionDeadlineNotElased = No puedes actualizar el estado de las sumisiones de esta conferencia porque su fecha de sumisiï¿½n aun no ha expirado.
 conference.cantUpdate.cameraReadyDeadlineElapsed = No puedes actualizar el estado de las sumisiones de esta conferencia porque su fecha de publicaciï¿½n ha expirado.
