--- a/Acme-Conference/src/main/webapp/views/configurationParameters/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/configurationParameters/messages.properties
@@ -12,7 +12,7 @@ confParams.message = System message in English
 confParams.messageEs = System message in Spanish
 confParams.countryCode = Country code
 confParams.defaultCountry = Default country code
-confParams.creditCardmakes = CreditCard Makes
+confParams.creditCardMakes = CreditCard Makes
 
 confParams.save = Save
 confParams.back = Back
