--- a/Acme-Conference/src/main/webapp/views/configurationParameters/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/configurationParameters/messages_es.properties
@@ -12,7 +12,7 @@ confParams.message = Mensaje del sistema en Inglés
 confParams.messageEs = Mensaje del sistema en Español
 confParams.countryCode = Código de País
 confParams.defaultCountry = Código de País estandar
-confParams.creditCardmakes = Marcas de tarjetas de crédito
+confParams.creditCardMakes = Marcas de tarjetas de crédito
 
 confParams.save = Guardar
 confParams.back = Atrás
