--- a/Acme-Conference/src/main/webapp/views/message/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages.properties
@@ -10,7 +10,7 @@ message.subject = Subject
 message.body = Body
 message.sender = From
 message.recipients = To
-message.topics = Topics
+message.topics = Topics. You have to pick a topic.
 message.topic = Topic
 message.messages = Messages
 message.moment = Moment
