--- a/Acme-Conference/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages_es.properties
@@ -10,7 +10,7 @@ message.subject = Asunto
 message.body = Cuerpo
 message.sender = De
 message.recipients = A
-message.topics = Temas
+message.topics = Temas. Debe elegir un tema
 message.topic = Tema
 message.messages = Mensajes
 message.moment = Momento
