--- a/Acme-Conference/src/main/webapp/views/report/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages.properties
@@ -20,3 +20,4 @@ report.display = Display
 report.back = Back
 report.addComment = Add comment
 report.cancel = Cancel
+report.commit.error = Cannot commit operation
