--- a/Acme-Conference/src/main/webapp/views/report/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages_es.properties
@@ -20,3 +20,4 @@ report.display = Mostrar
 report.back = Atrás
 report.addComment = Añadir un comentario
 report.cancel = Cancelar
+report.commit.error = No se ha podido completar la operación
