--- a/Acme-Conference/src/main/webapp/views/topic/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/topic/messages.properties
@@ -9,7 +9,10 @@
 topic.name = Name
 topic.nameEs = Name in Spanish
 
+topic.create = Create a topic
 topic.save = Save
 topic.back = Back
 topic.edit = Edit
+topic.delete = Delete
+topic.display = Display
 topic.commit.error = Cannot commit operation
