--- a/Acme-Conference/src/main/webapp/views/topic/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/topic/messages_es.properties
@@ -9,7 +9,10 @@
 topic.name = Nombre en Inglés
 topic.nameEs = Nombre en Español
 
+topic.create = Crear un tema
 topic.save = Guardar
 topic.back = Atrás
 topic.edit = Editar
+topic.delete = Eliminar
+topic.display = Mostrar
 topic.commit.error = No se ha podido realizar la operación
