--- a/Acme-Conference/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/message/messages_es.properties
@@ -23,3 +23,4 @@ message.back = Atrás
 message.delete = Eliminar
 
 message.systemMessage = Mensaje del sistema
+message.commit.error = Error de commiteo
