--- a/Acme-Conference/src/main/webapp/views/registration/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages.properties
@@ -23,4 +23,5 @@ registration.creditCard.owner = Owner
 registration.commit.error = Commit Error
 registration.conference = Conference
 registration.conferencesNotAvailable = We're sorry,but right now there isn't any conference with it's startDate not elapsed.
-
+registration.NotValidCreditCard = We're sorry,but you haven't introduced a valid Credit Card Number
+registration.NotTheAuthor = You can't access to a registration that is not yours
