--- a/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/registration/messages_es.properties
@@ -23,3 +23,5 @@ registration.creditCard.owner = Owner
 registration.commit.error = Commit Error
 registration.conference = Conferencia
 registration.conferencesNotAvailable = Lo sentimos,pero ahora mismo no hay ninguna conferencia con la fecha de comienzo sin expirar
+registration.NotValidCreditCard = Lo sentimos,pero no ha introducido un número de tarjeta válido
+registration.NotTheAuthor = No puedes acceder a un registro que no es tuyo
