--- a/Acme-Conference/src/main/webapp/views/report/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages.properties
@@ -21,3 +21,6 @@ report.back = Back
 report.addComment = Add comment
 report.cancel = Cancel
 report.commit.error = Cannot commit operation
+report.save = Save
+report.submissionNotValid = You tried to choose a not valid Submission to Report
+report.listComments= List the comments of the report
