--- a/Acme-Conference/src/main/webapp/views/report/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/report/messages_es.properties
@@ -7,7 +7,7 @@
 # http://www.tdg-seville.info/License.html
 
 report.reviewer = Revisor
-report.submission = Submission
+report.submission = Sumisión
 report.originalityScore = Originalidad
 report.qualityScore = Calidad
 report.readabilityScore = Legibilidad
@@ -21,3 +21,6 @@ report.back = Atrás
 report.addComment = Añadir un comentario
 report.cancel = Cancelar
 report.commit.error = No se ha podido completar la operación
+report.save = Guardar
+report.submissionNotValid = Has intentado elegir una sumisión no válida
+report.listComments= Listar los comentarios del reporte
