--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -52,3 +52,4 @@ submission.editPaperError.NotSubmissionAuthor = You can't edit the paper because
 submission.cantAddMoreReviewers = You can't add more reviewers because you already have 3 assigned
 submission.cantAssingNDElapsed = You can't add more reviewers because the notification Deadline has elapsed
 submission.remember = *Remember that the option of assign Automatically will not add any reviewer if none of the avaliable ones has the expertise requerided,but you can still assing one manually if you want
+submission.createReport = Create report
