--- a/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
@@ -54,3 +54,4 @@ submission.editPaperError.NotSubmissionAuthor = No puedes editar el papel corres
 submission.cantAddMoreReviewers = No puedes asignar más revisores porque ya tienes 3 asignados
 submission.cantAssingNDElapsed = No puedes asignar más revisores porque la fecha de notificación ha expirado
 submission.remember = *Recuerda que la opción de añadir revisores automáticamente no añadirá nada si ninguna de sus cualidades está relacionada con la conferencia, pero aun así puedes asignar uno manualmente si lo deseas.
+submission.createReport = Crear informe
