--- a/Acme-Conference/src/main/webapp/views/author/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/author/messages.properties
@@ -14,3 +14,6 @@ submission.list = Submissions list
 activity.list = Activities list
 conference.list = Conferences list
 creditcard.list = Creditcards list
+author.score = Score
+author.NotCalculatedYet = The score of this author hasn't been calculated yet
+author.alias = Alias
