--- a/Acme-Conference/src/main/webapp/views/configurationParameters/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/configurationParameters/messages.properties
@@ -18,3 +18,4 @@ confParams.save = Save
 confParams.back = Back
 confParams.edit = Edit
 confParams.commit.error = Cannot commit operation
+confParams.compute = Compute Score
