--- a/Acme-Conference/src/main/webapp/views/configurationParameters/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/configurationParameters/messages_es.properties
@@ -18,3 +18,4 @@ confParams.save = Guardar
 confParams.back = Atrás
 confParams.edit = Editar
 confParams.commit.error = No se ha podido realizar la operación
+confParams.compute = Calcular puntuacion
