--- a/Acme-Conference/src/main/webapp/views/dashboard/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/dashboard/messages.properties
@@ -14,3 +14,6 @@ dashboard.submissionsPerConferenceStats = Submissions per conference stats
 dashboard.registrationsPerConferenceStats = Registration per conference stats
 dashboard.feesPerConferenceStats = Fees of conferences stats
 dashboard.daysPerConferenceStats = Days per conference stats
+dashboard.conferencesPerCategoryStats = Conferences per category stats
+dashboard.commentsPerConferenceStats = Comments per conference stats
+dashboard.commentsPerActivityStats = Comments per activity stats
