--- a/Acme-Conference/src/main/webapp/views/dashboard/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/dashboard/messages_es.properties
@@ -10,7 +10,10 @@ dashboard.min = Minimo
 dashboard.max = Maximo
 dashboard.avg = Media
 dashboard.stddev = Desviación tipica
-dashboard.submissionsPerConferenceStats = Análisis de sumisiones por conferencia
-dashboard.registrationsPerConferenceStats = Análisis de los registros por conferencia
-dashboard.feesPerConferenceStats = Análisis de las cuotas de las conferencias
-dashboard.daysPerConferenceStats = Análisis de días de las conferencias
+dashboard.submissionsPerConferenceStats = Analisis de sumisiones por conferencia
+dashboard.registrationsPerConferenceStats = Analisis de los registros por conferencia
+dashboard.feesPerConferenceStats = Analisis de las cuotas de las conferencias
+dashboard.daysPerConferenceStats = Analisis de días de las conferencias
+dashboard.conferencesPerCategoryStats = Analisis de conferencias por categoría
+dashboard.commentsPerConferenceStats = Analisis de comentarios por conferencia
+dashboard.commentsPerActivityStats = Analisis de los comentarios por actividad
