--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -42,3 +42,5 @@ master.page.reviewer.reports = Reports
 
 master.page.sponsor = Sponsor
 master.page.sponsor.sponsorships = Sponsorships
+
+master.page.author.show = Show my profile
