--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -37,3 +37,5 @@ master.page.administrator.dashboard	= Dashboard
 
 master.page.sponsor = Patrocinador
 master.page.sponsor.sponsorships = Patrocinios
+
+master.page.author.show = Mostrar mi perfil
