--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -53,3 +53,5 @@ submission.cantAddMoreReviewers = You can't add more reviewers because you alrea
 submission.cantAssingNDElapsed = You can't add more reviewers because the notification Deadline has elapsed
 submission.remember = *Remember that the option of assign Automatically will not add any reviewer if none of the avaliable ones has the expertise requerided,but you can still assing one manually if you want
 submission.createReport = Create report
+submission.cantAddMoreReviewersStatus = Yo can't add more reviewers because the status of this submission has already been decided.
+submission.cantAddMoreReportsStatus = Yo can't add more reports because the status of this submission has already been decided.
