Finiquitados requisitos del A

--- a/Acme-Conference/src/main/webapp/views/author/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/author/messages.properties
@@ -15,5 +15,5 @@ activity.list = Activities list
 conference.list = Conferences list
 creditcard.list = Creditcards list
 author.score = Score
-author.NotCalculatedYet = The score of this author hasn't been calculated yet
+author.NotCalculatedYet = The score of this author hasn't been calculated yet or is just 0 after the process for not finding any matches in any of his/her submissions
 author.alias = Alias
