--- a/Acme-Conference/src/main/webapp/views/author/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/author/messages_es.properties
@@ -15,5 +15,5 @@ activity.list = Lista de actividades
 conference.list = Lista de conferencias
 creditcard.list = Lista de tarjetas de crédito
 author.score = Puntuación
-author.NotCalculatedYet = La puntuación de este author aún no ha sido calculada
+author.NotCalculatedYet = La puntuación de este author aún no ha sido calculada o simplemente es 0 tras el proceso por no encontrar ninguna coincidencia en sus sumisiones
 author.alias = Alias
