--- a/Acme-Conference/src/main/webapp/views/welcome/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/welcome/messages.properties
@@ -10,3 +10,4 @@ welcome.greeting.prefix 		= Greetings
 welcome.greeting.suffix			= !
 
 welcome.greeting.current.time	= Current time is 
+welcome.defaultMessage =Welcome to Acme Conference! Your scientific event manager
