--- a/Acme-Conference/src/main/webapp/views/category/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/category/messages.properties
@@ -10,11 +10,13 @@ category.categories = Categories
 category.name = Name
 category.nameEs = Name in Spanish
 category.CONFERENCE = Father of all category
+category.father = Father
 
-category.edit. Edit
+category.edit = Edit
 category.delete = Delete
 category.notEditable = Not editable
 category.notDeletable = Not deletable
 
+category.create = Add a category
 category.save = Save
 category.cancel = Cancel
