--- a/Acme-Conference/src/main/webapp/views/category/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/category/messages_es.properties
@@ -10,11 +10,13 @@ category.categories = Categorías
 category.name = Nombre en Inglés
 category.nameEs = Nombre en Español
 category.CONFERENCE = Padre de todas las categorías
+category.father = Padre
 
-category.edit. Editar
+category.edit = Editar
 category.delete = Eliminar
 category.notEditable = No editable
 category.notDeletable = No eliminable
 
+category.create = Añadir una categoria
 category.save = Guardar
 category.cancel = Cancelar
