--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -25,6 +25,7 @@ conference.isFinal = ¿Is in final mode?
 conference.administrator = Administrator
 conference.registrations = Registrations
 conference.submissions = Submissions
+conference.category = Category
 conference.filter.all = All
 conference.filter.forthcoming = Forthcoming
 conference.filter.past = Past
