--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -25,6 +25,7 @@ conference.isFinal = ¿ Esta en modo final ?
 conference.administrator = Administrador
 conference.registrations = Registros
 conference.submissions = Sumisiones
+conference.category = Categoria
 conference.filter.all = Todas
 conference.filter.forthcoming = Proximas
 conference.filter.past = Pasadas
