--- a/Acme-Conference/src/main/webapp/views/finder/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/finder/messages.properties
@@ -12,3 +12,4 @@ finder.endDate = End date. The format is like this: yyyy/MM/dd HH:mm
 finder.fee = Maximum fee
 finder.save = Save
 finder.cancel = Cancel
+finder.commit.error = Cannot commit operation
