--- a/Acme-Conference/src/main/webapp/views/finder/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/finder/messages_es.properties
@@ -12,3 +12,4 @@ finder.endDate = Fecha de finalización. El formato es así: yyyy/MM/dd HH:mm
 finder.fee = Precio máximo
 finder.save = Guardar
 finder.cancel = Cancelar
+finder.commit.error = No se ha podido completar la operacion
