--- a/Acme-Conference/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages.properties
@@ -22,6 +22,7 @@ master.page.editProfile = Edit profile
 master.page.administrator.confParams = Configuration Parameters
 master.page.confParamsEdit = Edit Configuration Parameters
 master.page.administrator.topics = Topics
+master.page.administrator.categories = Categories
 
 master.page.messages = Messages
 master.page.listMessages = List messages
