--- a/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/master-page/messages_es.properties
@@ -21,7 +21,8 @@ master.page.editProfile = Editar perfil
 
 master.page.administrator.confParams = Parámetros de configuración del sistema
 master.page.confParamsEdit = Editar parámetros de configuración
-master.page.administrator.topics = Topics
+master.page.administrator.topics = Temas
+master.page.administrator.categories = Categorias
 
 master.page.messages = Mensajes
 master.page.listMessages = Listar mensajes
