--- a/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages_es.properties
@@ -61,6 +61,8 @@ conference.addComment = Añadir comentario
 conference.actorSubmitted = Broadcast para los actores seguidores de esta Conferencia
 conference.actorRegistered = Broadcast para los actores registrados para esta Conferencia
 
+conference.decice = Decidir estado de las sumisiones
+
 
 conference.cantUpdate.submissionDeadlineNotElased = No puedes actualizar el estado de las sumisiones de esta conferencia porque su fecha de sumisiï¿½n aun no ha expirado.
 conference.cantUpdate.cameraReadyDeadlineElapsed = No puedes actualizar el estado de las sumisiones de esta conferencia porque su fecha de publicaciï¿½n ha expirado.
