--- a/Acme-Conference/src/main/webapp/views/submission/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages.properties
@@ -12,6 +12,7 @@ submission.ticker = Ticker
 submission.moment = Moment
 submission.status = Status
 submission.author = Author
+submission.reports = Reports
 submission.paper = Paper
 submission.paper.title = Title
 submission.paper.authors = Choose the others authors of the paper
