--- a/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/submission/messages_es.properties
@@ -12,6 +12,7 @@ submission.ticker = Ticker
 submission.moment = Momento
 submission.status = Estado
 submission.author = Autor
+submission.reports = Informes
 submission.paper = Papel
 submission.paper.title = Título
 submission.paper.authors = Selecciona a los otros autores del papel
