--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -53,6 +53,8 @@ conference.addComment = Add comment
 conference.actorSubmitted = Broadcast to actors submitted to this conference
 conference.actorRegistered = Broadcast to actors registered to this conference
 
+conference.decide = Decide status on submissions
+
 conference.form.error.submissionDeadline = The Submission Deadline must be in future and before the notification deadline, before the camera-ready Deadline , before the start date and before the endDate
 conference.form.error.notificationDeadline = The notification Deadline must be in future before the camera-ready deadline, before the startDate and before the endDate
 conference.form.error.cameraReadyDeadline = The Camera-Ready Deadline must be in future and before the startDate and before the endDate
