--- a/Acme-Conference/src/main/webapp/views/conference/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/conference/messages.properties
@@ -48,6 +48,8 @@ conference.submissionDeadlineNotElapsed = The submission Deadline hasn't elapsed
 conference.cameraReadyDeadlineElapsed = The Camera-Ready Deadline has elapsed.
 conference.cantEditFinal = You can't edit anymore the conference because now is in final mode.
 
+
+
 conference.listComments = List comments
 conference.addComment = Add comment
 conference.actorSubmitted = Broadcast to actors submitted to this conference
@@ -64,3 +66,7 @@ conference.submissionList = Submissions from the conference
 conference.cantUpdate.submissionDeadlineNotElased = You can't update the status of the submissions of this conference because it's submission deadline hasn't expired yet.
 conference.cantUpdate.cameraReadyDeadlineElapsed = You can't update the status of the submissions of this conference because it's camera-ready deadline has expired.
 conference.cantUpdate.NoUnderReviewSubmissions = You can't update the status of the submissions of this conference because it hasn't got any of them in "UNDER-REVIEW" state.
+
+
+
+conference.folets = Folets
