--- a/Acme-Conference/src/main/webapp/views/folet/messages.properties
+++ b/Acme-Conference/src/main/webapp/views/folet/messages.properties
@@ -20,3 +20,9 @@ folet.save				= Save
 folet.commit.error		= Commit error
 folet.yes                 = Yes
 folet.no					= No
+folet.title = Title 
+
+folet.publicationMomentNull  = The folet hasn't got a publication moment because isn't already in final mode
+folet.cantDeleteFinalMode = You can't delete the folet because is in final mode
+folet.cantEditFinalMode = You can't edit the folet because is in final mode 
+folet.commit.error = Commit Error
