--- a/Acme-Conference/src/main/webapp/views/folet/messages_es.properties
+++ b/Acme-Conference/src/main/webapp/views/folet/messages_es.properties
@@ -20,3 +20,9 @@ folet.save				= Guardar
 folet.commit.error		= Error al hacer commit
 folet.yes                 = Sí
 folet.no					= No
+folet.title = Título
+
+folet.publicationMomentNull  = La folet no posee aún una fecha de publicación porque no está en modo final
+folet.cantDeleteFinalMode = No puedes borrar la folet porque está en modo final
+folet.cantEditFinalMode = No puedes editar la folet porque está en modo final
+folet.commit.error = Error de transacción
